<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.example.d.life.FAQ">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="toggle_contents"
            android:tag="a0"
            android:text="@string/faq1"
            android:textScaleX="2"
            android:textStyle="bold"
            android:contentDescription="a0"/>

        <TextView
            android:id="@+id/a0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a1"/>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:text="@string/q2"
            android:clickable="true"
            android:onClick="toggle_contents"
            android:textScaleX="2"
            android:textStyle="bold"
            android:contentDescription="a1"/>

        <TextView
            android:id="@+id/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a2"
            />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.23"
            android:text="@string/q3"
            android:clickable="true"
            android:onClick="toggle_contents"
            android:textScaleX="2"
            android:textStyle="bold"
            android:contentDescription="a2"/>

        <TextView
            android:id="@+id/a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:text="@string/a3"/>
    </LinearLayout>


</ScrollView>
